added call for paper in all headers

--- a/pricing.html
+++ b/pricing.html
@@ -57,26 +57,21 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class="dropdown"><a href="index.html">Home</a>
-                                    <ul>
-                                        <li><a href="index.html">Home Classic</a></li>
-                                        <li><a href="index-2.html">Home Conference</a></li>
-                                        <li><a href="index-3.html">Home Meetup</a></li>
-                                        <li class="dropdown"><a href="#">Header Styles</a>
-                                            <ul>
-                                                <li><a href="index.html">Header Style One</a></li>
-                                                <li><a href="index-2.html">Header Style Two</a></li>
-                                                <li><a href="index-3.html">Header Style Three</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
+                               
                                 <li class="current dropdown"><a href="about-us.html">About</a>
                                     <ul>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="pricing.html">Pricing</a></li>
                                         <li><a href="faqs.html">FAQ's</a></li>
                                         <li><a href="coming-soon.html">Coming Soon</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown"><a href="papers.html">Call For</a>
+                                    <ul>
+                                        <li><a href="papers.html">Papers</a></li>
+                                        <li><a href="ssic2019.html">Sessions</a></li>
+                                        <li><a href="https://jaipur.manipal.edu/">Workshop</a></li>
+                                        <li><a href="about-jaipur.html">Tutorial</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="speakers.html">Speakers</a>
