--- a/speakers-old.html
+++ b/speakers-old.html
@@ -96,13 +96,21 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li><a href="index.html">Home</a></li>
+                                
                                 <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="ssic.html">SSIC 2017</a></li>
                                         <li><a href="ssic2019.html">SSIC 2019</a></li>
                                         <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown"><a href="papers.html">Call For</a>
+                                    <ul>
+                                        <li><a href="papers.html">Papers</a></li>
+                                        <li><a href="ssic2019.html">Sessions</a></li>
+                                        <li><a href="https://jaipur.manipal.edu/">Workshop</a></li>
+                                        <li><a href="about-jaipur.html">Tutorial</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="organizers.html">Committees</a>
