changed one organiser, ashish kumar

--- a/organizers.html
+++ b/organizers.html
@@ -82,7 +82,7 @@
         <div class="main-box">
             <div class="auto-container clearfix">
                 <div class="logo-box" id="logo">
-                    <div class="logo"><a target="__blank" href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
+                    <div class="logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
                 </div>
 
                 <!--Nav Box-->
@@ -737,15 +737,15 @@
                 <div class="speaker-block-two col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box height-fix">
                         <div class="info-box">
-                            <h4 class="name"><a target="__blank" href="#">Ashish Kumar</a></h4>
+                            <h4 class="name"><a target="__blank" href="#">Gaurav Agarwal</a></h4>
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEFaKpVRjHYnQ/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=lIhoQxob3-sFE-Emhe8dl3SVfPP9EQIC5AjdBfceUzs" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEl2JZ4bEciCw/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=qW076G9PZoPXr407Ui8BYQqQ77EzwhiEmG8LHWUZp94" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
-                                <li><a target="__blank" href="https://www.linkedin.com/in/aishshub/?originalSubdomain=in"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a target="__blank" href="https://www.linkedin.com/in/gaurav-aggarwal-772593139/"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
