--- a/index.html
+++ b/index.html
@@ -200,24 +200,93 @@
     </section>
     <!--End Banner Conference -->
     <!--Clients Section-->
-    <section class="clients-section-two" style="background-image: url(images/background/9.jpg);">
-        <div class="auto-container">
-            <div class="sponsors-outer">
-                <div class="row">
-                    <!-- Client Block -->
-                    <div class="client-block col-lg-6 col-md-4 col-sm-6">
-                        <figure class="image-box"><a><img style=" margin-top: 22px;" src="images/springerhome.png" alt=""><br/>(In talk with)</a></figure>
-                        <figure class="image-box"><a href="#"><img style="height: 120px; margin: 12px;" src="images/speakers/logo-clg.jpg" alt=""><br/></a></figure>
-                    </div>
-                    <div class="client-block col-lg-6 col-md-4 col-sm-6">
-                        <figure class="image-box"><a href="#"><img style="width: 300px;max-height: 300px; margin-top:20px;" src="images/speakers/partners1.jpeg" alt=""><br/></a></figure>
-                    </div>
+<!--    <section class="clients-section-two" style="background-image: url(images/background/9.jpg);">-->
+<!--        <div class="auto-container">-->
+<!--            <div class="sponsors-outer">-->
+<!--                <div class="row">-->
+<!--                    &lt;!&ndash; Client Block &ndash;&gt;-->
+<!--                    <div class="client-block col-lg-6 col-md-4 col-sm-6">-->
+<!--                        <figure class="image-box"><a><img style=" margin-top: 22px;" src="images/springerhome.png" alt=""><br/>(In talk with)</a></figure>-->
+<!--                        <figure class="image-box"><a href="#"><img style="height: 120px; margin: 12px;" src="images/speakers/logo-clg.jpg" alt=""><br/></a></figure>-->
+<!--                    </div>-->
+<!--                    <div class="client-block col-lg-6 col-md-4 col-sm-6">-->
+<!--                        <figure class="image-box"><a href="#"><img style="width: 300px;max-height: 300px; margin-top:20px;" src="images/speakers/partners1.jpeg" alt=""><br/></a></figure>-->
+<!--                    </div>-->
 
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+    <!--End Clients Section-->
+    <section class="gallery-section" style="padding-top: 10px;
+    padding-bottom: 10px;">
+        <div class="auto-container">
+            <div class="sec-title text-center">
+                <span class="title">Partners</span>
+                <h2>Joint Organizing Partners</h2>
+            </div>
+
+            <div class="row">
+                <!-- Gallery Item -->
+                <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+                    <div class="image-box">
+                        <figure class="image"><img src="images/speakers/logo-clg.jpg" alt=""></figure>
+                        <div class="overlay-box"><a href="images/speakers/logo-clg.jpg" class="lightbox-image" data-fancybox='gallery'><span class="icon fa fa-expand-arrows-alt"></span></a></div>
+                    </div>
                 </div>
+                <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+<!--                    <div class="image-box">-->
+<!--                        <figure class="image"><img src="images/uos.png" alt=""></figure>-->
+<!--                        <div class="overlay-box"><a href="images/uos.png" class="lightbox-image" data-fancybox='gallery'><span class="icon fa fa-expand-arrows-alt"></span></a></div>-->
+<!--                    </div>-->
+                </div>
+                <!-- Gallery Item -->
+                <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+                    <div class="image-box">
+                        <figure class="image"><img src="images/uos.png" alt=""></figure>
+                        <div class="overlay-box"><a href="images/uos.png" class="lightbox-image" data-fancybox='gallery'><span class="icon fa fa-expand-arrows-alt"></span></a></div>
+                    </div>
+                </div>
+
+                <!-- Gallery Item -->
+
             </div>
         </div>
     </section>
-    <!--End Clients Section-->
+    <section class="gallery-section" style="padding-top: 10px;
+    padding-bottom: 10px;">
+        <div class="auto-container">
+            <div class="sec-title text-center">
+                <span class="title">Partners</span>
+                <h2>Technical Partners</h2>
+            </div>
+
+            <div class="row">
+                <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeIn" data-wow-delay="800ms">
+<!--                    <div class="image-box">-->
+<!--                        <figure class="image"><img src="images/speakers/partners1.jpeg" alt=""></figure>-->
+<!--                        <div class="overlay-box"><a href="images/speakers/partners1.jpeg" class="lightbox-image" data-fancybox='gallery'><span class="icon fa fa-expand-arrows-alt"></span></a></div>-->
+<!--                    </div>-->
+                </div>
+                <!-- Gallery Item -->
+                <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeIn" data-wow-delay="800ms">
+                    <div class="image-box">
+                        <figure class="image" ><img src="images/speakers/partners1.jpeg" style="height: 150px;width: 100px;" alt=""></figure>
+                        <div class="overlay-box"><a href="images/speakers/partners1.jpeg" class="lightbox-image" data-fancybox='gallery'><span class="icon fa fa-expand-arrows-alt"></span></a></div>
+                    </div>
+                </div>
+                <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeIn" data-wow-delay="800ms">
+<!--                    <div class="image-box">-->
+<!--                        <figure class="image"><img src="images/speakers/partners1.jpeg" alt=""></figure>-->
+<!--                        <div class="overlay-box"><a href="images/speakers/partners1.jpeg" class="lightbox-image" data-fancybox='gallery'><span class="icon fa fa-expand-arrows-alt"></span></a></div>-->
+<!--                    </div>-->
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
 
 
     <!-- Features Section -->
