--- a/papers.html
+++ b/papers.html
@@ -183,7 +183,7 @@
     <!--End Page Title-->
 
     <!-- Speakers Section -->
-    <section class="speakers-section-three">
+    <section class="speakers-section-three"style="padding-bottom: 0px;">
         <div class="auto-container">
             <div class="sec-title text-center">
                 <span class="title">Authors are invited to submit their original, unpublished and quality research papers in the areas including but not limited to the following topics:</span>
@@ -260,110 +260,114 @@
             </div>
 
     <!-- Main Footer -->
-    <footer class="main-footer">
-        <!--Widgets Section-->
-        <div class="widgets-section">
-            <div class="auto-container">
-                <div class="row">
-                    <!--Big Column-->
-                    <div class="big-column col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                        <div class="row">
-                            <!--Footer Column-->
-                            <div class="footer-column col-xl-7 col-lg-6 col-md-6 col-sm-12">
-                                <div class="footer-widget about-widget">
-                                    <div class="logo">
-                                        <a href="index.html"><img src="images/logo_image-min.png" alt=""></a>
-                                    </div>
-                                    <div class="text">
-                                        <p>Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world</p>
-                                    </div>
-                                    <!-- <ul class="social-icon-one social-icon-colored">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                                    </ul> -->
-                                </div>
-                            </div>
-
-                            <!--Footer Column-->
-                            <div class="footer-column col-xl-5 col-lg-6 col-md-6 col-sm-12">
-                                <div class="footer-widget useful-links">
-                                    <h2 class="widget-title">Useful Links</h2>
-                                    <ul class="user-links">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about-us.html">About Us</a></li>
-                                        <li><a href="speakers.html">Speakers</a></li>
-                                        <li><a href="organizers.html">Committees</a></li>
-                                        <li><a href="schedule.html">Schedule</a></li>
-                                        <li><a href="contact.html">Contact Us</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!--Big Column-->
-                    <div class="big-column col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                        <div class="row">
-                            <!--Footer Column-->
-                            <div class="footer-column col-lg-6 col-md-6 col-sm-12">
+        <footer class="main-footer">
+            <!--Widgets Section-->
+            <div class="widgets-section">
+                <div class="auto-container">
+                    <div class="row">
+                        <!--Big Column-->
+                        <div class="big-column col-xl-6 col-lg-12 col-md-12 col-sm-12">
+                            <div class="row">
                                 <!--Footer Column-->
-                                <div class="footer-widget contact-widget">
-                                    <h2 class="widget-title">Contact Us</h2>
-                                    <!--Footer Column-->
-                                    <div class="widget-content">
-                                        <ul class="contact-list">
-                                            <li>
-                                                <span class="icon flaticon-phone"></span>
-                                                <div class="text"><a href="tel:+91-96676-04115">+91-96676-04115</a></div>
-                                            </li>
+                                <div class="footer-column col-xl-7 col-lg-6 col-md-6 col-sm-12">
+                                    <div class="footer-widget about-widget">
+                                        <div class="logo">
+                                            <a href="index.html"><img src="images/logo_image-min.png" alt=""></a>
+                                        </div>
+                                        <div class="text">
+                                            <p>Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world</p>
+                                        </div>
+                                        <!-- <ul class="social-icon-one social-icon-colored">
+                                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                            <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                                            <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                                        </ul> -->
+                                    </div>
+                                </div>
 
-                                            <li>
-                                                <span class="icon flaticon-paper-plane"></span>
-                                                <div class="text"><a href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></div>
-                                            </li>
-
-                                            <li>
-                                                <span class="icon flaticon-worldwide"></span>
-                                                <div class="text">Bagru, Near GVK Toll Plaza<br> Jaipur, Rajasthan , Pin-303007</div>
-                                            </li>
+                                <!--Footer Column-->
+                                <div class="footer-column col-xl-5 col-lg-6 col-md-6 col-sm-12">
+                                    <div class="footer-widget useful-links">
+                                        <h2 class="widget-title">Useful Links</h2>
+                                        <ul class="user-links">
+                                            <li><a href="index.html">Home</a></li>
+                                            <li><a href="about-us.html">About Us</a></li>
+                                            <li><a href="speakers.html">Speakers</a></li>
+                                            <li><a href="organizers.html">Committees</a></li>
+                                            <li><a href="schedule.html">Schedule</a></li>
+                                            <li><a href="contact.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
-                            <!--Footer Column-->
-                            <div class="footer-column col-lg-6 col-md-6 col-sm-12">
+                        <!--Big Column-->
+                        <div class="big-column col-xl-6 col-lg-12 col-md-12 col-sm-12">
+                            <div class="row">
                                 <!--Footer Column-->
-                                <div class="footer-widget instagram-widget">
-                                    <h2 class="widget-title">Instagram Gallery</h2>
-                                    <div class="widget-content">
-                                        <div class="outer clearfix">
-                                            <figure class="image">
-                                                <a href="images/ssic2017/1.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/1.png" alt=""></a>
-                                            </figure>
+                                <div class="footer-column col-lg-6 col-md-6 col-sm-12">
+                                    <!--Footer Column-->
+                                    <div class="footer-widget contact-widget">
+                                        <h2 class="widget-title">Contact Us</h2>
+                                        <!--Footer Column-->
+                                        <div class="widget-content">
+                                            <ul class="contact-list">
+                                                <li>
+                                                    <span class="icon flaticon-phone"></span>
+                                                    <div class="text"><a href="tel:+91-96676-04115">+91-96676-04115</a></div>
+                                                </li>
 
-                                            <figure class="image">
-                                                <a href="images/ssic2017/2.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/2.png" alt=""></a>
-                                            </figure>
+                                                <li>
+                                                    <span class="icon flaticon-paper-plane"></span>
+                                                    <div class="text"><a href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></div>
+                                                </li>
 
-                                            <figure class="image">
-                                                <a href="images/ssic2017/3.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/3.png" alt=""></a>
-                                            </figure>
+                                                <li>
+                                                    <span class="icon flaticon-worldwide"></span>
+                                                    <div class="text">Bagru, Near GVK Toll Plaza<br> Jaipur, Rajasthan , Pin-303007</div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
 
-                                            <figure class="image">
-                                                <a href="images/ssic2017/4.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/4.png" alt=""></a>
-                                            </figure>
+                                <!--Footer Column-->
+                                <div class="footer-column col-lg-6 col-md-6 col-sm-12">
+                                    <!--Footer Column-->
+                                    <div class="footer-widget instagram-widget">
+                                        <h2 class="widget-title">Instagram Gallery</h2>
+                                        <div class="widget-content">
+                                            <div class="outer clearfix">
+                                                <figure class="image">
+                                                    <a href="images/ssic2017/1.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/1.png" alt=""></a>
+                                                </figure>
 
-                                            <figure class="image">
-                                                <a href="images/ssic2017/5.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/5.png" alt=""></a>
-                                            </figure>
+                                                <figure class="image">
+                                                    <a href="images/ssic2017/2.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/2.png" alt=""></a>
+                                                </figure>
 
-                                            <figure class="image">
-                                                <a href="images/ssic2017/6.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/6.png" alt=""></a>
-                                            </figure>
+                                                <figure class="image">
+                                                    <a href="images/ssic2017/3.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/3.png" alt=""></a>
+                                                </figure>
+
+                                                <figure class="image">
+                                                    <a href="images/ssic2017/4.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/4.png" alt=""></a>
+                                                </figure>
+
+                                                <figure class="image">
+                                                    <a href="images/ssic2017/5.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/5.png" alt=""></a>
+                                                </figure>
+
+                                                <figure class="image">
+                                                    <a href="images/ssic2017/6.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/6.png" alt=""></a>
+
+
+
+                                                </figure>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -372,32 +376,25 @@
                     </div>
                 </div>
             </div>
-        </div>
 
 
 
-        <!--End pagewrapper-->
+            <!--End pagewrapper-->
 
-
-        <!--Scroll to top-->
-        <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
-        <script src="js/jquery.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery-ui.js"></script>
-        <script src="js/jquery.fancybox.js"></script>
-        <script src="js/appear.js"></script>
-        <script src="js/owl.js"></script>
-        <script src="js/wow.js"></script>
-        <script src="js/script.js"></script>
-        <!-- Color Setting -->
-        <script src="js/color-settings.js"></script>
-        <!--Google Map APi Key-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc"></script>
-        <script src="js/map-script.js"></script>
-        <!--End Google Map APi-->>
-    <!-- End Footer -->
-
+            <!--Scroll to top-->
+            <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
+            <script src="js/jquery.js"></script>
+            <script src="js/popper.min.js"></script>
+            <script src="js/bootstrap.min.js"></script>
+            <script src="js/jquery-ui.js"></script>
+            <script src="js/jquery.fancybox.js"></script>
+            <script src="js/jquery.countdown.js"></script>
+            <script src="js/appear.js"></script>
+            <script src="js/owl.js"></script>
+            <script src="js/wow.js"></script>
+            <script src="js/script.js"></script>
+            <!-- Color Setting -->
+            <script src="js/color-settings.js"></script>
 </body>
 <!-- Copied from https://expert-themes.com/html/eventrox/speakers.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 </html>
