--- a/index.html
+++ b/index.html
@@ -123,7 +123,13 @@
                                     </ul>
                                 </li>
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
-                               <li><a href="schedule.html">Schedule</a></li>
+                               <li class="dropdown"><a href="schedule.html">Author Info.</a>
+                                <ul style="width: 300px;">
+                                    <li><a href="papers.html">Registration</a></li>
+                                    <li><a href="ssic2019.html">Banking</a></li>
+                                    <li><a href="https://jaipur.manipal.edu/">Travel and Accommodation</a></li>
+                                </ul>
+                               </li>
                             </ul>
                         </div>
                     </nav>
@@ -152,7 +158,7 @@
 
                         <!-- Button Box -->
                         <div class="btn-box">
-                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one"><span class="btn-title">Submit Online</span></a>
+                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one" ><span class="btn-title">Submit Online</span></a>
                         </div>
                     </div>
                 </div>
@@ -169,6 +175,9 @@
                 <div class="nav-logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
 
                 <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
+                <div class="btn-box" style="margin: 15px;">
+                    <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one" ><span class="btn-title">Submit Online</span></a>
+                </div>
             </nav>
         </div><!-- End Mobile Menu -->
     </header>
