--- a/index.html
+++ b/index.html
@@ -1256,6 +1256,7 @@
 <script src="js/owl.js"></script>
 <script src="js/wow.js"></script>
 <script src="js/script.js"></script>
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/bd0dc8955e053a2acfc5ae35a/7e21163d67bee9efec7c01637.js");</script>
 <!-- Color Setting -->
 <script src="js/color-settings.js"></script>
 </body>
