--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <ul style="width: 300px;">
                                     <li><a href="papers.html">Registration</a></li>
                                     <li><a href="ssic2019.html">Banking</a></li>
-                                    <li><a href="https://jaipur.manipal.edu/">Travel and Accommodation</a></li>
+                                    <li><a href="coming-soon.html">Travel and Accommodation</a></li>
                                 </ul>
                                </li>
                             </ul>
