--- a/organizers.html
+++ b/organizers.html
@@ -100,7 +100,8 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                               
+
+
                                 <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="ssic.html">SSIC 2017</a></li>
@@ -124,7 +125,13 @@
                                     </ul>
                                 </li>
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
-                                <li><a href="schedule.html">Schedule</a></li>
+                                <li class="dropdown"><a href="schedule.html">Author Info.</a>
+                                    <ul style="width: 300px;">
+                                        <li><a href="papers.html">Registration</a></li>
+                                        <li><a href="ssic2019.html">Banking</a></li>
+                                        <li><a href="coming-soon.html">Travel and Accommodation</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </nav>
@@ -132,28 +139,9 @@
 
                     <!-- Outer box -->
                     <div class="outer-box">
-                        <!--Search Box-->
-                        <!-- <div class="search-box-outer">
-                            <div class="dropdown">
-                                <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flaticon-search"></span></button>
-                                <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
-                                    <li class="panel-outer">
-                                        <div class="form-container">
-                                            <form method="post" action="index.html">
-                                                <div class="form-group">
-                                                    <input type="search" name="field-name" value="" placeholder="Search Here" required="">
-                                                    <button type="submit" class="search-btn"><span class="fa fa-search"></span></button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div> -->
-
                         <!-- Button Box -->
                         <div class="btn-box">
-                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one"><span class="btn-title">Submit Online</span></a>
+                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one" ><span class="btn-title">Submit Online</span></a>
                         </div>
                     </div>
                 </div>
@@ -167,9 +155,12 @@
 
             <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
             <nav class="menu-box">
-                <div class="nav-logo"><a target="__blank" href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
 
                 <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
+                <div class="btn-box" style="margin: 15px;">
+                    <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one" ><span class="btn-title">Submit Online</span></a>
+                </div>
             </nav>
         </div><!-- End Mobile Menu -->
     </header>
