--- a/schedule.html
+++ b/schedule.html
@@ -124,8 +124,8 @@
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
                                 <li class="dropdown"><a href="schedule.html">Author Info.</a>
                                     <ul style="width: 300px;">
-                                        <li><a href="papers.html">Registration</a></li>
-                                        <li><a href="ssic2019.html">Banking</a></li>
+                                        <li><a href="coming-soon.html">Registration</a></li>
+                                        <li><a href="coming-soon.html">Banking</a></li>
                                         <li><a href="coming-soon.html">Travel and Accommodation</a></li>
                                     </ul>
                                 </li>
