change in springer logo

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <span class="title">3<sup style="text-transform: lowercase">rd</sup> International Conference on</span>
                 <h2> Smart Systems:<br/>Innovations in<br/>Computing</h2>
                 <span class="title">22 - 23 January, 2021</span>
-                <figure class="image-box" style="margin-bottom: 60px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;(In talk with)</a></figure>
+                <figure class="image-box" style="margin-bottom: 60px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;(In process)</a></figure>
                 <div class="time-counter"><div class="time-countdown clearfix" data-countdown="1/22/2021"></div></div>
 
 <!--                <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Book Now</span></a></div>-->
