--- a/speakers.html
+++ b/speakers.html
@@ -178,7 +178,7 @@
         <div class="auto-container">
             <div class="sec-title text-center">
                 <span class="title">Speakers</span>
-                <h2>Todays Performers</h2>
+                <h2>Performers</h2>
             </div>
 
             <div class="row">
