added new speaker

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 margin-left:130px;
             }
         }
+        .heightfix {
+            height: 400px!important;
+        }
     </style>
 
 </head>
@@ -360,8 +363,8 @@
 
             <div class="row">
                 <!-- Speaker Block -->
-                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
+                <div class="speaker-block-three col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="heightfix inner-box">
                         <div class="image-box">
                             <figure class="image"><a target="_blank" href="http://class.ece.iastate.edu/arun/"><img src="images/speakers/dr.jpg" alt=""></a></figure>
                         </div>
@@ -376,8 +379,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
+                <div class="speaker-block-three col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="heightfix inner-box">
                         <div class="image-box">
                             <figure class="image"><a target="_blank" href="https://www.linkedin.com/in/subhajitbhattacharya07/"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=N6ep9zsPf2F3A2mpZHyhtI22SjzDCzqHJ1N5GS0WnJ0" alt=""></a></figure>
                         </div>
@@ -392,8 +395,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
+                <div class="speaker-block-three col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="heightfix inner-box">
                         <div class="image-box">
                             <figure class="image"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/"><img src="images/speakers/Priyadarsi-Nanda.jpg" alt=""></a></figure>
                         </div>
@@ -404,6 +407,22 @@
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="speaker-block-three col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="heightfix inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a target="_blank" href="http://www.iitb.ac.in/en/employee/prof-krithi-ramamritham"><img src="images/speakers/speaker4.jpeg" alt=""></a></figure>
+                        </div>
+                        <div class="info-box">
+                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/">Prof. Krithi Ramamritham</a></h4>
+                            <span class="designation">Professor in Computer Science and Engineering, IIT Bombay</span>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a target="_blank" href="http://www.iitb.ac.in/en/employee/prof-krithi-ramamritham"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
