--- a/speakers.html
+++ b/speakers.html
@@ -96,7 +96,7 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                               
+
                                 <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="ssic.html">SSIC 2017</a></li>
@@ -192,7 +192,7 @@
 
             <div class="row">
                 <!-- Speaker Block -->
-                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                <div class="speaker-block-three col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
                             <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/dr.jpg" alt=""></a></figure>
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                <div class="speaker-block-three col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
                             <figure class="image"><a href="speakers-detail.html"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=N6ep9zsPf2F3A2mpZHyhtI22SjzDCzqHJ1N5GS0WnJ0" alt=""></a></figure>
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                <div class="speaker-block-three col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
                             <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/Priyadarsi-Nanda.jpg" alt=""></a></figure>
@@ -236,6 +236,22 @@
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="speaker-block-three col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="heightfix inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a target="_blank" href="http://www.iitb.ac.in/en/employee/prof-krithi-ramamritham"><img src="images/speakers/speaker4.jpeg" alt=""></a></figure>
+                        </div>
+                        <div class="info-box">
+                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/">Prof. Krithi Ramamritham</a></h4>
+                            <span class="designation">Professor in Computer Science and Engineering, IIT Bombay</span>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a target="_blank" href="http://www.iitb.ac.in/en/employee/prof-krithi-ramamritham"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
