deakin logo and publication committee

--- a/organizers.html
+++ b/organizers.html
@@ -636,6 +636,45 @@
     </section>
     <!-- End Speakers Section -->
 
+     <!-- Speakers Section -->
+    <section class="speakers-section-two">
+        <div class="anim-icons">
+            <span class="icon icon-circle-4 wow zoomIn"></span>
+            <span class="icon icon-circle-3 wow zoomIn"></span>
+        </div>
+
+        <div class="auto-container">
+            <div class="sec-title text-center">
+                <span class="title">Organisers</span>
+                <h2>Publication chair</h2>
+            </div>
+
+            <div class="row">
+
+                <!-- Speaker Block -->
+                <div class="speaker-block-two col-lg-6 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box height-fix">
+                        <div class="info-box">
+                            <h4 class="name"><a target="__blank" href="#">Dilbag Singh</a></h4>
+                            <span class="designation">Manipal University Jaipur</span>
+                        </div>
+                        <div class="image-box">
+                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/Dilbag%20Singh.jpg" alt=""></a></figure>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a target="__blank" href="https://jaipur.manipal.edu/foe/schools-faculty/faculty-list/dilbag-singh.html"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Speakers Section -->
+
+
+
 
     <!-- Speakers Section -->
     <section class="speakers-section-two">
