--- a/index.html
+++ b/index.html
@@ -217,7 +217,11 @@
                                     <figure class="image"><img src="images/uos.png" style="height: 80px;width: 250px;" alt=""></figure>
                                 </div>
                             </div>
-
+                            <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+                                <div class="image-box">
+                                    <figure class="image"><img src="images/speakers/deakin.png" style="height: 100px;width: 150px;" alt=""></figure>
+                                </div>
+                            </div>
                             <!-- Gallery Item -->
 
                         </div>
@@ -302,7 +306,6 @@
         <div class="auto-container">
             <div class="sec-title text-center">
                 <span class="title" style="color:#fff;">PREVIOUS STATISTICS</span>
-                <h2 style="color:#fff;">2019</h2>
             </div>
             <div class="fact-counter">
                 <div class="row clearfix">
@@ -311,7 +314,7 @@
                     <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="count-box">
                             <span class="icon icon_check"></span>
-                            <span class="count-text" data-speed="3000" data-stop="210">0</span>
+                            <span class="count-text" data-speed="3000" data-stop="537">0</span>
                             <h4 class="counter-title">Total submissions</h4>
                         </div>
                     </div>
@@ -320,7 +323,7 @@
                     <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
                         <div class="count-box">
                             <span class="icon icon_shield"></span>
-                            <span class="count-text" data-speed="3000" data-stop="192">0</span>
+                            <span class="count-text" data-speed="3000" data-stop="482">0</span>
                             <h4 class="counter-title">National</h4>
                         </div>
                     </div>
@@ -329,7 +332,7 @@
                     <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
                         <div class="count-box">
                             <span class="icon icon_globe-2"></span>
-                            <span class="count-text" data-speed="3000" data-stop="18">0</span>
+                            <span class="count-text" data-speed="3000" data-stop="55">0</span>
                             <h4 class="counter-title">International</h4>
                         </div>
                     </div>
@@ -338,7 +341,7 @@
                     <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
                         <div class="count-box">
                             <span class="icon icon_book_alt"></span>
-                            <span class="count-text" data-speed="3000" data-stop="70">0</span>
+                            <span class="count-text" data-speed="3000" data-stop="155">0</span>
                             <h4 class="counter-title">Accepted Papers</h4>
                         </div>
                     </div>
