removing prof and one link change

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="feature-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="icon-box"><img class="icon" src="images/icons/conference.png" style="height:60px;width:auto;"></img></div>
-                        <h4><a href="about-us.html">About SSIC</a></h4>
+                        <h4><a href="#">About SSIC</a></h4>
                         <div class="text">Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world </div>
                         <div class="link-box"><a href="about-us.html" class="theme-btn">Read More</a></div>
                     </div>
@@ -372,7 +372,7 @@
                             <figure class="image"><a target="_blank" href="http://class.ece.iastate.edu/arun/"><img src="images/speakers/dr.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
-                            <h4 class="name"><a target="_blank" href="http://class.ece.iastate.edu/arun/">Prof Arun K Somani</a></h4>
+                            <h4 class="name"><a target="_blank" href="http://class.ece.iastate.edu/arun/">Arun K Somani</a></h4>
                             <span class="designation">Distinguished Professor & Associate Dean for Research, College of Engineering, IOWA University</span>
                         </div>
                         <div class="social-box">
@@ -420,7 +420,7 @@
                             <figure class="image"><a target="_blank" href="http://www.iitb.ac.in/en/employee/prof-krithi-ramamritham"><img src="images/speakers/speaker4.jpeg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
-                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/">Prof. Krithi Ramamritham</a></h4>
+                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/">Krithi Ramamritham</a></h4>
                             <span class="designation">Professor in Computer Science and Engineering, IIT Bombay</span>
                         </div>
                         <div class="social-box">
