--- a/speakers.html
+++ b/speakers.html
@@ -190,7 +190,7 @@
                             <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/dr.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Prof Arun K Somani</a></h4>
+                            <h4 class="name"><a href="speakers-detail.html">Arun K Somani</a></h4>
                             <span class="designation">Distinguished Professor & Associate Dean for Research, College of Engineering, IOWA University</span>
                         </div>
                         <div class="social-box">
@@ -238,7 +238,7 @@
                             <figure class="image"><a target="_blank" href="http://www.iitb.ac.in/en/employee/prof-krithi-ramamritham"><img src="images/speakers/speaker4.jpeg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
-                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/">Prof. Krithi Ramamritham</a></h4>
+                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/">Krithi Ramamritham</a></h4>
                             <span class="designation">Professor in Computer Science and Engineering, IIT Bombay</span>
                         </div>
                         <div class="social-box">
