--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         <div class="icon-box"><img class="icon" src="images/icons/conference.png" style="height:60px;width:auto;"></img></div>
                         <h4><a href="#">About SSIC</a></h4>
                         <div class="text">Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world </div>
-                        <div class="link-box"><a href="about-us.html" class="theme-btn">Read More</a></div>
+                        <div class="link-box"><a href="#" class="theme-btn">Read More</a></div>
                     </div>
                 </div>
 
