--- a/evisa.html
+++ b/evisa.html
@@ -1,25 +1,25 @@
 ﻿<!DOCTYPE html>
- <html lang="en">
+<html lang="en">
 <!-- Copied from https://expert-themes.com/html/eventrox/about-us.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 <head>
-<meta charset="utf-8">
+    <meta charset="utf-8">
     <title>SSIC 2021 | Manipal University Jaipur</title>
-<!-- Stylesheets -->
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
-<!--Color Switcher Mockup-->
-<link href="css/color-switcher-design.css" rel="stylesheet">
+    <!-- Stylesheets -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
+    <!--Color Switcher Mockup-->
+    <link href="css/color-switcher-design.css" rel="stylesheet">
 
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
-<!-- Responsive -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- Responsive -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 
     <style>
         /*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
@@ -124,10 +124,9 @@
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
                                 <li class="dropdown"><a href="schedule.html">Author Info.</a>
                                     <ul style="width: 300px;">
-                                        <li><a href="coming-soon.html">Registration</a></li>
-                                        <li><a href="coming-soon.html">Banking</a></li>
+                                        <li><a href="papers.html">Registration</a></li>
+                                        <li><a href="ssic2019.html">Banking</a></li>
                                         <li><a href="coming-soon.html">Travel and Accommodation</a></li>
-                                        <li><a href="evisa.html">E Visa</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -175,7 +174,7 @@
 
         <div class="auto-container">
             <div class="content">
-<!--                <div class="logo"><a href="index.html"><img style="width:50%;" src="images/logo_image.png" alt=""></a></div>-->
+                <!--                <div class="logo"><a href="index.html"><img style="width:50%;" src="images/logo_image.png" alt=""></a></div>-->
                 <h1>Coming Soon</h1>
                 <div class="text">Stay tuned for more information.<br> Subscribe to our newsletter to stay updated</div>
                 <div class="timer">
@@ -195,8 +194,8 @@
                         <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
                         <li><a href="#"><span class="fab fa-twitter"></span></a></li>
                         <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
-<!--                        <li><a href="#"><span class="fab fa-behance"></span></a></li>-->
-<!--                        <li><a href="#"><span class="fab fa-dribbble"></span></a></li>-->
+                        <!--                        <li><a href="#"><span class="fab fa-behance"></span></a></li>-->
+                        <!--                        <li><a href="#"><span class="fab fa-dribbble"></span></a></li>-->
                     </ul>
                 </div>
             </div>
