update About Page header, headings

--- a/about-us.html
+++ b/about-us.html
@@ -97,8 +97,7 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-
-<li class="dropdown"><a href="ssic.html">About</a>
+                            <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="ssic.html">SSIC 2017</a></li>
                                         <li><a href="ssic2019.html">SSIC 2019</a></li>
@@ -106,7 +105,6 @@
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
                                     </ul>
-                                </li>/ul>
                                 </li>
                                 <li class="dropdown"><a href="papers.html">Call For</a>
                                     <ul>
@@ -190,7 +188,7 @@
                         <div class="sec-title">
                             <span class="title">ABOUT CONFERENCE</span>
                             <h2>Smart Systems Innovations in Computing</h2>
-                            <div class="text" style="text-align: justify!important;">Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world to share and publicize their research work and development activities in the field of Smart Systems and Intelligent Computing. This conference provides opportunities to different university students to interact with the external researchers and delegates to exchange new ideas and application experiences face to face, also helps the university to find global partners for establishing educational and research relations and for future collaboration.</div>
+                            <div class="text" style="text-align: justify!important;">Smart Systems Innovations in Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world to share and publicize their research work and development activities in the field of Smart Systems and Intelligent Computing. This conference provides opportunities to different university students to interact with the external researchers and delegates to exchange new ideas and application experiences face to face, also helps the university to find global partners for establishing educational and research relations and for future collaboration.</div>
                         </div>
                     </div>
                 </div>
@@ -217,56 +215,6 @@
         </div>
     </section>
     <!--End About Section -->
-
-    <!-- Fun Fact Section -->
-    <section class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);">
-        <div class="auto-container">
-            <div class="sec-title text-center">
-                <span class="title" style="color:#fff;">PREVIOUS STATISTICS</span>
-            </div>
-            <div class="fact-counter">
-                <div class="row clearfix">
-
-                    <!--Column-->
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
-                        <div class="count-box">
-                            <span class="icon icon_check"></span>
-                            <span class="count-text" data-speed="3000" data-stop="537">0</span>
-                            <h4 class="counter-title">Total submissions</h4>
-                        </div>
-                    </div>
-
-                    <!--Column-->
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
-                        <div class="count-box">
-                            <span class="icon icon_shield"></span>
-                            <span class="count-text" data-speed="3000" data-stop="482">0</span>
-                            <h4 class="counter-title">National</h4>
-                        </div>
-                    </div>
-
-                    <!--Column-->
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
-                        <div class="count-box">
-                            <span class="icon icon_globe-2"></span>
-                            <span class="count-text" data-speed="3000" data-stop="55">0</span>
-                            <h4 class="counter-title">International</h4>
-                        </div>
-                    </div>
-
-                    <!--Column-->
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
-                        <div class="count-box">
-                            <span class="icon icon_book_alt"></span>
-                            <span class="count-text" data-speed="3000" data-stop="155">0</span>
-                            <h4 class="counter-title">Accepted Papers</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--End Fun Fact Section -->
 
     <!-- Features Section -->
     <section class="features-section">
