--- a/evisa.html
+++ b/evisa.html
@@ -125,9 +125,10 @@
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
                                 <li class="dropdown"><a href="schedule.html">Author Info.</a>
                                     <ul style="width: 300px;">
-                                        <li><a href="papers.html">Registration</a></li>
-                                        <li><a href="ssic2019.html">Banking</a></li>
+                                        <li><a href="coming-soon.html">Registration</a></li>
+                                        <li><a href="coming-soon.html">Banking</a></li>
                                         <li><a href="coming-soon.html">Travel and Accommodation</a></li>
+                                        <li><a href="evisa.html">E Visa</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -176,8 +177,11 @@
         <div class="auto-container">
             <div class="content">
                 <!--                <div class="logo"><a href="index.html"><img style="width:50%;" src="images/logo_image.png" alt=""></a></div>-->
-                <h1>Coming Soon</h1>
-                <div class="text">Stay tuned for more information.<br> Subscribe to our newsletter to stay updated</div>
+                <div id="c4988" class="csc-default"><h1>Information for Getting Indian Visa</h1><div class="csc-textpic-text"><p>SSIC 2021 participants should apply for a conference visa to attend the conference in Mumbai, India. Families of conference participants should apply for a tourist visa. To get accurate information about how to apply for the above visas please check the websites of the Indian Consulates in your respective countries as the application process may vary between countries.
+                </p>
+                <p>Some general points to note</p><ul> <li dir="ltr">For a conference visa, you will need an invitation letter from IIT Bombay. Please request for an invitation letter by filling the form<a href="https://docs.google.com/forms/d/e/1FAIpQLSdAFa1bRpmpVVcjeQ9BkG-BpIis0MesvV67vtc9Zu4Df-vRbA/viewform" target="_blank"> here</a>. Invitation letters will only be issued to authors of accepted papers and registered participants.</li> <ul> <li dir="ltr">If you are a Foreign National of the “Prior Reference Category”, the visa process for you may be different and you may need further clearance documents. Please visit the <a href="https://icpe2019.spec.org/registration/pre-registration.html" target="_blank">Pre-Registration Page</a> for details.</li> </ul> <li dir="ltr">Conference approval/clearance letter from Ministry of Home Affairs of India is no longer required to be produced to apply for a conference visa. Nonetheless it has been noticed that many Indian consulates may continue to ask for these. Thus, for abundant caution you can use copies of the following two letters, in case you run into this problem -</li> <ul> <li dir="ltr"><a href="fileadmin/user_upload/documents/icpe_2019/MHALetterToAllMisions.pdf">Letter</a> to all Indian Missions from Ministry of Home Affairs, stating that such clearance is not required if the event does not fall under a certain category (see Page 4, point 2).</li> <li dir="ltr"><a href="fileadmin/user_upload/documents/icpe_2019/MEA-clearance.PDF">Political Clearance from Ministry of External Affairs</a>, Government of India to IIT Bombay, for holding ICPE 2019. &nbsp;</li> </ul> <li dir="ltr">Finally, please note and confirm the following from your local consulates before deciding when you should apply for a conference visa</li> <ul> <li dir="ltr">Conference visa is generally issued for the duration of the conference and upto a maximum of 3 months.</li> <li dir="ltr">The conference visa is generally valid from the date of issue of the visa, not from the date of entry &nbsp;into India.</li> </ul> </ul><p>&nbsp;
+                </p>
+                <p>If you still have any questions please write us at thessic [at] gmail.com.</p></div></div>
                 <div class="timer">
                     <div class="cs-countdown clearfix" data-countdown="12/1/2019 05:06:59"></div>
                 </div>
